--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>DEMO TEST CYCLE MANAGEMENT</h1>
+    <h2>Manual deploy</h2>
     <div id="root"></div>
   </body>
 </html>
