--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body style="background-color: beige">
+  <body style="background-color: #260cf0">
     <h1>DEMO TEST CYCLE MANAGEMENT</h1>
     <h2>Manual deploy</h2>
     <div id="root"></div>
